# helix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  STRATEGIES.md  benchmark-results.json  helix-api-genes.db-shm  helix-api-genes.db-wal  helix-genes.db-shm  helix-genes.db-wal  package-lock.json  package.json  vision.html
dashboard/: server.ts
dashboard/static/: benchmark.html  coinbase-demo.html  docs.html  index.html  insights.html  research.html
demo/: live.ts
docs/: RUNBOOK.md
examples/benchmark/: baseline-comparison.ts
examples/demo/: agent-simulator.ts  index.html
examples/demos/: run.py
examples/e2e-agent/: agent.ts  setup.sh
examples/mainnet-observe/: comparison-agent.ts  viem-error-fixtures.ts
examples/real-e2e/: test-all-3-llm.ts  test-construct.ts  test-reasoning.ts  zero-eth-test.ts
experiments/exp7-llm-vs-pcec/: error-dataset.json  llm_classifier.py
experiments/exp8/: exp8_v2.ts  exp8_v2_results.json  results.json  wrong-vs-correct.ts
integrations/openclaw-hook/: HOOK.md  handler.ts  package.json
public/: index.html
python/: README.md  helix-genes.db-shm  helix-genes.db-wal  pyproject.toml
python/examples/: coinbase_agentkit.py
python/helix_agent/: __init__.py  client.py  decorator.py  guard.py
python/helix_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/helix_agent_sdk.egg-info/: PKG-INFO
python/tests/: conftest.py  test_client.py  test_decorator.py  test_guard.py
scripts/: demo-gif.sh  demo-verify.sh  proxy.ts  start-proxy.sh  update-seed-genes.ts
workers/: telemetry-worker.js
(+14 files in other folders)
