[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-agent"
version = "0.1.0"
description = "Python SDK for Helix — self-healing infrastructure for AI agent payments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Helix Team"}
]
keywords = ["helix", "ai-agents", "self-healing", "payments", "web3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "responses>=0.23"]

[project.urls]
Homepage = "https://github.com/adrianhihi/helix"
Repository = "https://github.com/adrianhihi/helix"

[tool.setuptools.packages.find]
where = ["."]
include = ["helix_agent*"]
